[tool.poetry]
name = "formicaio-macte"
version = "0.1.0"
description = ""
authors = ["Matteo Gevi <matteogevi97@gmail.com>"]
packages = [
    { include = "formicaio_macte" },  
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4,<3.12"
flask = "^3.0.3"
openai = "^1.51.2"
flask-cors = "^5.0.0"
gunicorn = "^23.0.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
